# ImageProcessingAtPixelLevel

./: .gitignore  CMakeLists.txt  README.md  rgb2gray.cpp
colorSpaceConversions/: rgb2gray.cpp
